test/kubernetes/e2e/features/rate_limit/testdata/common.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kgateway-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kgateway
  namespace: kgateway-system
spec:
  gatewayClassName: kgateway
  listeners:
  - name: http
    port: 8080
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
