test/kubernetes/e2e/features/rate_limit/testdata/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-route-1
  namespace: kgateway-system
spec:
  parentRefs:
  - name: http
  hostnames:
  - "example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /path1
    backendRefs:
    - name: backend-0
      namespace: kgateway-system
      port: 8080
