test/kubernetes/e2e/features/rate_limit/testdata/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-0
  namespace: kgateway-system
spec:
  selector:
    app: backend-0
    version: v1
  ports:
  - port: 8080
    name: http
    targetPort: 5678
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-0
  namespace: kgateway-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-0
      version: v1
  template:
    metadata:
      labels:
        app: backend-0
        version: v1
    spec:
      containers:
      - name: echo
        image: hashicorp/http-echo:latest
        args:
          - "-text=Hello from backend service"
        ports:
        - containerPort: 5678
          name: http
